--- a/tea-station/css/styles.css
+++ b/tea-station/css/styles.css
@@ -112,6 +112,12 @@ p{
     background: var(--clr-primary-light);
 }
 
+.clearfix::after, .clearfix::before{
+    content:"";
+    clear: both;
+    display: table;
+}
+
 /*
 header
 */
@@ -187,4 +193,17 @@ header
 }
 .skill:hover .skill-icon{
     transform: translateY(-5px);
+}
+
+@media screen and (min-widht: 576px) {
+    .skill{
+        float: left;
+        width: 50%;
+    }
+}
+@media screen and (min-widht: 1200px) {
+    .skill{
+       
+        width: 25%;
+    }
 }
