--- a/tea-station/css/styles.css
+++ b/tea-station/css/styles.css
@@ -92,7 +92,7 @@ p{
     text-transform: uppercase;
     background: var(--clr-primary);
     color: var(--clr-white);
-    padding: 0.75rem 1rem;
+    padding: 0.375rem 0.75rem;
     letter-spacing: var(--spacing);
     display: inline-block;
     font-weight: 700;
@@ -113,6 +113,29 @@ p{
     content:"";
     clear: both;
     display: table;
+}
+
+.section-title h3{
+    font-family: var(--ff-secondary);
+    color: var(--clr-primary);
+}
+
+.section-title {
+    margin-top: 2rem;
+}
+
+.section-center{
+    padding: 4rem 0;
+    width: 85vw;
+    margin: 0 auto;
+    max-width: 1170px;
+}
+
+@media screen and (min-width:992px) {
+    .section-center{
+        width: 95vw;
+        padding: 4rem 1rem;
+    }
 }
 
 /*
@@ -212,4 +235,42 @@ header
 /*
  about
 */
+
+.about-img,
+.about-info{
+    padding: 2rem 0;
+}
+
+.about-picture-container{
+    background: var(--clr-primary);
+    border: 0.5rem solid var(--clr-primary);
+    max-width: 30rem;
+    /* extra stuff*/
+    overflow: hidden;
+}
+
+.about-picture{
+    transform: var(--transition);
+}
+.about-picture-container:hover .about-picture{
+    opacity: 0.5;
+    transform: scale(1.2);
+}
+
+.about-text{
+    max-width: 26rem;
+    color: var(--clr-grey-5);
+
+}
+
+@media screen and (min-width:992px) {
+    .about-img,
+    .about-info{
+        float: left;
+        width: 50%;
+    }
+    .about-info{
+        padding-left: 2rem;
+    }
+}
 
